add legal notice to download pages

--- a/views/android.ejs
+++ b/views/android.ejs
@@ -1,6 +1,9 @@
-<div style="width: 200px; margin: 140px auto;">
+<div style="width: 200px; margin: 80px auto 0 auto;">
   <table width="200"><tr>
     <td><a href="http://pin13.net/mapattack/MapAttack-Android.apk"><img src="../iphone/AppIcon60x60.png" height="60" width="60" /></a></td>
     <td>Install MapAttack for Android</td>
   </tr></table>
+</div>
+<div style="width: 320px; margin: 20px auto; font-size: 8pt; line-height: 10pt;">
+MapAttack is a game played in the real world. You have voluntarily elected to participate in the game. As such, you assume all risk of playing the MapAttack game and using the associated software. Esri is not responsible for your safety during game play, and you should always use common sense as situations change and some data may be incorrect or not current. You must comply with all laws, regulations, and ordinances. Watch for moving traffic and obstacles. You should not follow any navigation or route suggestions that appear to be hazardous, unsafe, or illegal. I agree that the terms and conditions set forth in the <a href="http://www.esri.com/legal/software-license">Esri License Agreement (E-204)</a> shall govern my use of the software.
 </div>
