replace socket.io with normal websocket

--- a/views/viewer.ejs
+++ b/views/viewer.ejs
@@ -61,7 +61,7 @@
   </div>
 
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.1.5/angular.min.js"></script>
-  <script type="text/javascript" src="http://api.mapattack.org:8000/socket.io/socket.io.js"></script>
+  <!--<script type="text/javascript" src="http://api.mapattack.org:8000/socket.io/socket.io.js"></script>-->
   <script src="/lib/leaflet.js"></script>
   <%- partial('partials/_ga') %>
   <script type="text/javascript">var gameData = <%- JSON.stringify(state) %>;</script>
