use https for plist

--- a/views/iphone.ejs
+++ b/views/iphone.ejs
@@ -1,6 +1,6 @@
 <div style="width: 200px; margin: 80px auto 0 auto;">
   <table width="200"><tr>
-    <td><a href="itms-services://?action=download-manifest&url=http://web.mapattack.org/iphone/mapattack.plist"><img src="AppIcon60x60.png" height="60" width="60" /></a></td>
+    <td><a href="itms-services://?action=download-manifest&url=https://pin13.net/mapattack/mapattack.plist"><img src="AppIcon60x60.png" height="60" width="60" /></a></td>
     <td>Install MapAttack for iPhone</td>
   </tr></table>
 </div>
